HELENE THE GREAT CAME TO OUR SALVATION (new Dockerfile, fixed connection of DB and App)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,9 +20,9 @@
                     .map(doc =>
                         `<div class="document">
                             <h2>${doc.title}</h2>
-                            <p>Author: ${doc.author}</p>
+                            <!--<p>Author: ${doc.author}</p>
                             <p>Year: ${doc.year}</p>
-                            <p><a href="${doc.url}" target="_blank">View Document</a></p>
+                            <p><a href="${doc.url}" target="_blank">View Document</a></p>   -->
                         </div>`
                     )
                     .join("");
