documents are added to DB, missing: save files to volume

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script>
         const DOCS_RESOURCE_URL = "/docs";
-        const UPLOAD_URL = "/upload";
+        const UPLOAD_URL = "/docs/upload";
 
         async function loadDocs() {
             const divElement = document.getElementById("content");
